sumo/tests/sumo/spec/departure/errors/speed_given100/rawdump.sumo.meso
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Mon Dec  9 16:38:18 2013 by SUMO sumo Version dev-SVN-r15279
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo-sim.org/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml,input_additional.add.xml"/>
    </input>

    <output>
        <netstate-dump value="rawdump.xml"/>
    </output>

    <time>
        <begin value="0"/>
        <end value="0"/>
    </time>

    <report>
        <no-duration-log value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<netstate xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo-sim.org/xsd/netstate_file.xsd">
</netstate>
